Feat: Usuario completo, adicao de explicacao no lumxget e post, e adicao da validao e swagger.
